# spice

./: .gitignore  Pipfile  README.md  images.html  index.html  main.py  package.json  pyproject.toml  readme.md  requirements.txt  runserver.py  settings-example.cfg  settings.cfg  spice.service  tiles.html  todo.md  uwsgi.ini
spice/: __init__.py  auth.py  cli.py  database.py  files.py  handlers.py  log.py  models.py  table.py  tiles.py  util.py  view.py  views.py
spice/handlers/: __init__.py  audio.py  gif.py  handler.py  images.py  text.py  utils.py  videos.py
spice/static/css/: code.css  spice.css  styles.css
spice/static/js/: glyph.js  list.js  log.js  table.js  upload.js
spice/templates/: 404.html  default-handler.html  images.html  list.html  log.html  log_item.html  login.html  page.html  pagination.html  table.html  text.html  tiles.html  upload.html  view.html  view_file.html
spice/templates/views/: audio.html  images.html  text.html  videos.html
static/: glyph.js  list.js  spice.css
static/css/: spice.css
static/js/: glyph.js  list.js
